<resources>
    <string name="app_name">WheelChair Power</string>
    <string name="battery_level">0</string>string>
    <string name="battery_health">0</string>string>


    <string name="label_state">State:</string>
    <string name="connected">Connected</string>
    <string name="disconnected">Disconnected</string>

    <string name="title_devices">Scan for BLE Device</string>
    <string name="ble_not_supported">BLE is not supported</string>
    <string name="error_bluetooth_not_supported">Bluetooth is not supported.</string>

    <string name="unknown_device">Unknown Device</string>
    <string name="wrong_data">Wrong Data</string>

    <!-- Menu items -->
    <string name="menu_connect">Connect</string>
    <string name="menu_disconnect">Disconnect</string>
    <string name="menu_scan">Scan</string>
    <string name="menu_stop">Stop</string>


    <string name="notify_low_bat_title">Cadex Battery Low</string>
    <string name="notify_low_bat_text">Battery level is only&#160;</string>

    <string name="charge">Charge</string>
    <string name="current">Current</string>
    <string name="voltage">Voltage</string>
    <string name="cycle">Cycle</string>
    <string name="capacity">Remain Cap</string>
    <string name="remKM">Range</string>

    <string name="full_battery">Full</string>
    <string name="hr_left"> hr left</string>
    <string name="min_left"> min left</string>
    <string name="hr_full"> hr to full</string>
    <string name="min_full"> min to full</string>

    <string name="health">Health</string>
    <string name="no_connection">No Connection</string>
    <string name="wrong_device">Wrong Device</string>

    <string name="subscribe">Auto Updating&#8230;</string>
    <string name="unSubscribe">Cancel Auto Update</string>

    <string name="TTE">min left</string>
    <string name="TTE_Default">-- min left</string>

    <string name="dismiss">Dismiss</string>
    <string name="error">Error</string>
    <string name="connectFail">Cannot connect to the battery. Please re-connect by clicking the [connect] button. If it still not works, please restart bluetooth on your phone.</string>
    <string name="connectFailToast">Connection failed. Please retry.</string>

    <string name="theme">Theme</string>

    <string name="pref_alert_title">Alert</string>
    <string name="pref_alert_summ">Alert on low battery is enabled</string>
    <string name="pref_no_alert_summ">Alert on low battery is disabled</string>
    <string name="pref_alert_percent_title">Alert Percentage</string>
    <string name="pref_alert_percent_summ">Alert when battery level is lower than this percentage</string>

    <string name="battery_type">Battery Type</string>
    <string name="pref_battery_type_default">Lithium Ion</string>
    <string name="pref_battery_type_summ">Choose your battery type</string>

    <string name="pref_wheelchair_speed_summ">To estimate range, enter your wheelchair speed in km/hour</string>
    <string name="pref_wheelchair_current_summ">To estimate range, enter the nominal current of your wheelchair in Amp.</string>
    <string name="wheelchair_speed">Wheelchair Speed</string>
    <string name="wheelchair_current">Wheelchair Current</string>
</resources>
